Fix overflow scroll to auto

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -86,7 +86,7 @@ p {
     height: 100%;
 }
 #col2 {
-    overflow: scroll;
+    overflow: auto;
 }
 
 .full-height {
